# audentify

./: .dockerignore  .gitignore  Dockerfile.spring  README.md  docker-compose.yml  docker-scripts.sh  pom.xml
microservices/audiofingerprinting/: .dockerignore  CMakeLists.txt  Dockerfile
microservices/audiofingerprinting/src/audio/: AudioLoader.cpp  AudioLoader.h  AudioProcessor.cpp  AudioProcessor.h
microservices/audiofingerprinting/src/core/: Constants.cpp  Constants.h
microservices/audiofingerprinting/src/main/: audioFingerprinting.cpp  server_main.cpp
microservices/audiofingerprinting/src/processing/: HashGenerator.cpp  HashGenerator.h  PeakDetection.cpp  PeakDetection.h
microservices/audiofingerprinting/src/recognition/: Recognition.cpp  Recognition.h
microservices/audiofingerprinting/src/storage/: Storage.cpp  Storage.h
microservices/audiofingerprinting/src/utils/: CircularBuffer.cpp  CircularBuffer.h  Types.h
microservices/vocalremoval/: .dockerignore  Dockerfile  cli.py  requirements.txt  run_server.py
microservices/vocalremoval/app/: __init__.py  download_config.py  main.py  models.py  separator.py
src/main/java/com/github/ruilin808/audentify/: AudentifyApplication.java  AudioController.java  WebController.java
src/main/resources/: application-docker.yml  application.properties  application.yml
src/main/resources/static/: index.html
src/test/java/com/github/ruilin808/audentify/: AudentifyApplicationTests.java
